--- a/src/main/resources/pl/dariusz/mediaplayer/Scene.fxml
+++ b/src/main/resources/pl/dariusz/mediaplayer/Scene.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -11,9 +12,15 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgb(174, 173, 173);" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.dariusz.mediaplayer.Controller">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgb(174, 173, 173);" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.dariusz.mediaplayer.Controller">
    <center>
-      <StackPane fx:id="pane" prefHeight="150.0" prefWidth="200.0" stylesheets="@style.css" BorderPane.alignment="CENTER">
+      <StackPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" stylesheets="@style.css" BorderPane.alignment="CENTER">
+         <Label fx:id="audioTitle" StackPane.alignment="TOP_CENTER">
+            <StackPane.margin>
+               <Insets top="20.0" />
+            </StackPane.margin>
+         </Label>
+         <ImageView fx:id="audioIcon" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER" />
          <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" />
          <VBox alignment="BOTTOM_CENTER" maxHeight="40.0" prefHeight="50.0" stylesheets="@style.css" StackPane.alignment="BOTTOM_CENTER">
             <StackPane.margin>
