--- a/src/main/resources/pl/dariusz/mediaplayer/Scene.fxml
+++ b/src/main/resources/pl/dariusz/mediaplayer/Scene.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,53 +15,87 @@
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: rgb(174, 173, 173);" stylesheets="@style.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.dariusz.mediaplayer.Controller">
    <center>
-      <StackPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" stylesheets="@style.css" BorderPane.alignment="CENTER">
-         <Label fx:id="audioTitle" StackPane.alignment="TOP_CENTER">
+      <StackPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #E8E8E8;" BorderPane.alignment="CENTER">
+         <Label fx:id="audioTitle" alignment="TOP_CENTER" StackPane.alignment="TOP_CENTER">
             <StackPane.margin>
                <Insets top="20.0" />
             </StackPane.margin>
          </Label>
-         <ImageView fx:id="audioIcon" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER" />
+         <ImageView fx:id="audioIcon" fitHeight="225.0" fitWidth="311.0" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+            <image>
+               <Image url="@Images/sound.png" />
+            </image></ImageView>
          <MediaView fx:id="mediaView" fitHeight="200.0" fitWidth="200.0" />
          <VBox alignment="BOTTOM_CENTER" maxHeight="40.0" prefHeight="50.0" stylesheets="@style.css" StackPane.alignment="BOTTOM_CENTER">
             <StackPane.margin>
                <Insets />
             </StackPane.margin>
             <Slider fx:id="progressBar" stylesheets="@style.css" />
-            <HBox alignment="BOTTOM_CENTER" maxHeight="40.0" prefHeight="30.0" stylesheets="@style.css">
-               <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadFile" styleClass="Button" stylesheets="@style.css" text="Upload">
+            <HBox alignment="BOTTOM_CENTER" maxHeight="40.0" prefHeight="30.0" style="-fx-background-color: #202020;">
+               <Button fx:id="uploadButton" mnemonicParsing="false" onAction="#uploadFile" style="-fx-background-color: E8E8E8;">
                   <HBox.margin>
-                     <Insets bottom="7.0" right="7.0" />
+                     <Insets bottom="7.0" right="7.0" top="5.0" />
                   </HBox.margin>
+                  <graphic>
+                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images/upload.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
                </Button>
-               <Button mnemonicParsing="false" onAction="#playMedia" stylesheets="@style.css" text="Play">
+               <Button mnemonicParsing="false" onAction="#resetMedia" style="-fx-background-color: E8E8E8;" stylesheets="@style.css">
                   <HBox.margin>
                      <Insets bottom="7.0" right="7.0" />
                   </HBox.margin>
+                  <graphic>
+                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images/back.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
                </Button>
-               <Button mnemonicParsing="false" onAction="#pauseMedia" stylesheets="@style.css" text="Pause">
+               <Button mnemonicParsing="false" onAction="#playMedia" style="-fx-background-color: E8E8E8;" stylesheets="@style.css">
                   <HBox.margin>
                      <Insets bottom="7.0" right="7.0" />
                   </HBox.margin>
+                  <graphic>
+                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images/play.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
                </Button>
-               <Button mnemonicParsing="false" onAction="#resetMedia" stylesheets="@style.css" text="Reset">
+               <Button mnemonicParsing="false" onAction="#pauseMedia" style="-fx-background-color: E8E8E8;" stylesheets="@style.css">
                   <HBox.margin>
                      <Insets bottom="7.0" right="7.0" />
                   </HBox.margin>
+                  <graphic>
+                     <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                        <image>
+                           <Image url="@Images/pause.png" />
+                        </image>
+                     </ImageView>
+                  </graphic>
                </Button>
-               <ImageView fx:id="volumeIcon" fitHeight="24.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="volumeIcon" fitHeight="34.0" fitWidth="31.0" pickOnBounds="true" preserveRatio="true">
                   <HBox.margin>
-                     <Insets bottom="7.0" right="7.0" />
+                     <Insets bottom="12.0" left="10.0" right="7.0" />
                   </HBox.margin>
+                  <image>
+                     <Image url="@Images/volume.png" />
+                  </image>
                </ImageView>
-               <Slider fx:id="volumeSlider" stylesheets="@style.css" value="50.0">
+               <Slider fx:id="volumeSlider" prefHeight="17.0" prefWidth="154.0" stylesheets="@style.css" value="50.0">
                   <HBox.margin>
-                     <Insets bottom="10.0" />
+                     <Insets bottom="19.0" left="-5.0" right="10.0" />
                   </HBox.margin>
                </Slider>
-               <ComboBox fx:id="mediaSpeed" prefWidth="150.0" promptText="Speed" stylesheets="@style.css">
+               <ComboBox fx:id="mediaSpeed" prefWidth="150.0" promptText="Speed" style="-fx-background-color: E8E8E8;">
                   <HBox.margin>
-                     <Insets bottom="7.0" right="7.0" />
+                     <Insets bottom="15.0" right="7.0" />
                   </HBox.margin>
                </ComboBox>
             </HBox>
